# DopeAgents

./: .gitignore  .pre-commit-config.yaml  README.md  git_status.txt  pyproject.toml  test_context_providers.py  test_output.txt
.github/workflows/: quality.yml
docs/: Design_Document.md  Implementation_Roadmap.md  Technical_Overview.md  architecture.md
dopeagents/: __init__.py  config.py  errors.py
dopeagents/adapters/: __init__.py  autogen_adapter.py  crewai_adapter.py  langchain_adapter.py  langgraph_adapter.py  wrap.py
dopeagents/agent_utils/: __init__.py  chunking.py  content_extractor.py  credibility.py  fact_checker.py  search_providers.py  text_utils.py
dopeagents/agents/: __init__.py  deep_researcher.py  deep_summarizer.py  research_agent.py
dopeagents/agents/_researcher/: __init__.py  claim_analysis.py  confidence.py  hybrid_step.py  memory.py  model_capability.py  progress.py  report_generator.py  tools.py
dopeagents/agents/_summarizer/: __init__.py  analyzer.py  chunker.py  formatter.py  schemas.py
dopeagents/agents/agent_flows/: deep_researcher.mmd  deep_summarizer.mmd
dopeagents/benchmark/: __init__.py
dopeagents/cache/: __init__.py  disk.py  manager.py
dopeagents/cli/: __init__.py  main.py
dopeagents/contracts/: __init__.py  checker.py  pipeline.py  types.py
dopeagents/core/: __init__.py  agent.py  context.py  metadata.py  state.py  types.py
dopeagents/cost/: __init__.py  budget.py  guard.py  tracker.py
dopeagents/lifecycle/: __init__.py  executor.py  hooks.py  result.py
dopeagents/mcp_server/: registry.py  server.py
dopeagents/observability/: __init__.py  debug.py  instructor_hooks.py  logging.py  otel.py  tracer.py
dopeagents/registry/: __init__.py
dopeagents/resilience/: __init__.py  degradation.py  fallback.py  retry.py
dopeagents/sandbox/: __init__.py
dopeagents/security/: __init__.py  redaction.py
dopeagents/spec/: __init__.py
dopeagents/tools/: __init__.py  base.py  function.py  rest.py
examples/: deep_researcher_usage.py  deep_summarizer_usage.py
scripts/: check_free_models.py  test_model_access.py
tests/: __init__.py  test_config.py  test_errors.py  test_infrastructure.py  test_token_tracking.py
tests/agents/: __init__.py  test_deep_research.py  test_deep_summarizer.py
tests/config/: test_config.py
tests/contracts/: __init__.py  test_checker.py  test_pipeline.py
tests/core/: __init__.py  test_agent.py
tests/custom/: test_context_providers.py  test_deep_summarizer.py
tests/infrastructure/: test_infrastructure.py
tests/integration/: test_composition.py  test_resilience.py
